fix: make the sidebar filter scrollable on smaller devices (#244)
* fix: make the sidebar filter scrollable on smaller devices

* fix: code review

--- a/src/js/pages/OffersList/components/SorterFilter.scss
+++ b/src/js/pages/OffersList/components/SorterFilter.scss
@@ -55,6 +55,8 @@ $menu-width: 85%;
     position: fixed;
     max-width: 350px;
     height: 100%;
+    padding-bottom: 50px;
+    overflow-y: auto;
   }
 
   .btn {
